[package]
name = "noteguard"
version = "0.1.0"
edition = "2021"

[features]
forwarder = ["tokio-tungstenite", "tokio", "futures-util"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

# forwarder deps
tokio-tungstenite = { version = "0.23.1", optional = true }
tokio = { version = "1.38.0", features = ["macros", "time", "sync", "rt-multi-thread"], optional = true }
futures-util = { version = "0.3.30", optional = true }
log = "0.4.22"
env_logger = "0.11.3"
